@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-915: With BigDataIO some messages can get ignored (majakabiljo via pavanka)
+
   GIRAPH-918: GIRAPH-908 has a small bug reg counting entries (pavanka)
 
   GIRAPH-842: option to dump histogram of memory usage when heap is low on memory (pavanka)
